First Model-Controler-View - Department

--- a/SalesWebMvc/Views/Shared/Error.cshtml
+++ b/SalesWebMvc/Views/Shared/Error.cshtml
@@ -1,4 +1,5 @@
-﻿@model ErrorViewModel
+﻿@model SalesWebMvc.Models.ViewModels.ErrorViewModel
+//ErrorViewModel
 @{
     ViewData["Title"] = "Error";
 }
